--- a/.github/workflows/1-enable-github-pages.yml
+++ b/.github/workflows/1-enable-github-pages.yml
@@ -1,9 +1,9 @@
 name: Step 1, Enable GitHub Pages
 
-# This step triggers after we run a pages build
+# This step triggers after we run a pages build.
 # This workflow updates from step 1 to step 2.
 
-# This will run every time we run a pages build
+# This will run every time we run a pages build.
 # Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
@@ -11,8 +11,8 @@ on:
 
 # Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
-  # Need `contents: read` to checkout the repository
-  # Need `contents: write` to update the step metadata
+  # Need `contents: read` to checkout the repository.
+  # Need `contents: write` to update the step metadata.
   contents: write
 
 jobs:
@@ -34,23 +34,23 @@ jobs:
     needs: get_current_step
 
     # We will only run this action when:
-    # 1. This repository isn't the template repository
-    # 2. The step is currently 1
+    # 1. This repository isn't the template repository.
+    # 2. The step is currently 1.
     # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
       ${{ !github.event.repository.is_template
           && needs.get_current_step.outputs.current_step == 1 }}
 
-    # We'll run Ubuntu for performance instead of Mac or Windows
+    # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
 
     steps:
-      # We'll need to check out the repository so that we can edit the README
+      # We'll need to check out the repository so that we can edit the README.
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Let's get all the branches
+          fetch-depth: 0 # Let's get all the branches.
           ref: my-pages
 
       # In README.md, switch step 1 for step 2.
