--- a/.github/workflows/2-configure-your-site.yml
+++ b/.github/workflows/2-configure-your-site.yml
@@ -1,9 +1,9 @@
 name: Step 2, Configure your site
 
-# This step triggers after the learner update their Pages config file
+# This step triggers after the learner update their Pages config file.
 # This workflow updates from step 2 to step 3.
 
-# This will run every time we update `_config.yml` in the `my-pages` branch 
+# This will run every time we update `_config.yml` in the `my-pages` branch.
 # Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
@@ -15,8 +15,8 @@ on:
 
 # Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
-  # Need `contents: read` to checkout the repository
-  # Need `contents: write` to update the step metadata
+  # Need `contents: read` to checkout the repository.
+  # Need `contents: write` to update the step metadata.
   contents: write
 
 jobs:
@@ -38,23 +38,23 @@ jobs:
     needs: get_current_step
 
     # We will only run this action when:
-    # 1. This repository isn't the template repository
-    # 2. The step is currently 2
+    # 1. This repository isn't the template repository.
+    # 2. The step is currently 2.
     # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
       ${{ !github.event.repository.is_template
           && needs.get_current_step.outputs.current_step == 2 }}
 
-    # We'll run Ubuntu for performance instead of Mac or Windows
+    # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
 
     steps:
-      # We'll need to check out the repository so that we can edit the README
+      # We'll need to check out the repository so that we can edit the README.
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Let's get all the branches
+          fetch-depth: 0 # Let's get all the branches.
           ref: my-pages
 
       # In README.md, switch step 2 for step 3.
