--- a/.github/workflows/4-step.yml
+++ b/.github/workflows/4-step.yml
@@ -18,7 +18,7 @@ env:
 jobs:
   find_exercise:
     name: Find Exercise Issue
-    uses: skills/exercise-toolkit/.github/workflows/find-exercise-issue.yml@v0.5.0
+    uses: skills/exercise-toolkit/.github/workflows/find-exercise-issue.yml@v0.6.0
 
   post_review_content:
     name: Post review content
@@ -47,7 +47,8 @@ jobs:
   finish_exercise:
     name: Finish Exercise
     needs: [find_exercise, post_review_content]
-    uses: skills/exercise-toolkit/.github/workflows/finish-exercise.yml@v0.5.0
+    uses: skills/exercise-toolkit/.github/workflows/finish-exercise.yml@v0.6.0
     with:
       issue-url: ${{ needs.find_exercise.outputs.issue-url }}
+      exercise-title: "GitHub Pages"
 
