--- a/.github/workflows/3-step.yml
+++ b/.github/workflows/3-step.yml
@@ -79,6 +79,22 @@ jobs:
         if: contains(steps.*.outcome, 'failure')
         run: exit 1
 
+      - name: Build message - step finished
+        id: build-message-step-finish
+        uses: skills/action-text-variables@v2
+        with:
+          template-file: exercise-toolkit/markdown-templates/step-feedback/step-finished-prepare-next-step.md
+          template-vars: |
+            next_step_number: 4
+
+      - name: Update comment - step finished
+        run: |
+          gh issue comment "$ISSUE_URL" \
+            --body "$ISSUE_BODY"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ISSUE_BODY: ${{ steps.build-message-step-finish.outputs.updated-text }}
+
   post_next_step_content:
     name: Post next step content
     needs: [find_exercise, check_step_work]
@@ -96,22 +112,6 @@ jobs:
           repository: skills/exercise-toolkit
           path: exercise-toolkit
           ref: v0.4.0
-
-      - name: Build message - step finished
-        id: build-message-step-finish
-        uses: skills/action-text-variables@v2
-        with:
-          template-file: exercise-toolkit/markdown-templates/step-feedback/step-finished-prepare-next-step.md
-          template-vars: |
-            next_step_number: 4
-
-      - name: Create comment - step finished
-        run: |
-          gh issue comment "$ISSUE_URL" \
-            --body "$ISSUE_BODY"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ISSUE_BODY: ${{ steps.build-message-step-finish.outputs.updated-text }}
 
       - name: Create comment - add step content
         run: |
